syntax = "proto3";
package dbproto;

import "github.com/fuserobotics/statestream/config.proto";

message ComponentList {
  repeated string component_name = 1;
}

message Component {
  repeated string state_name = 1;
}

message State {
  repeated int64 snapshot_timestamp = 1 [packed=true];
  repeated int64 all_timestamp = 2 [packed=true];
  stream.Config stream_config = 3;
}
